@@ -4,6 +4,9 @@ import com.aquweak.demo.Product.Model.Product;
 import com.aquweak.demo.Product.Model.ProductDTO;
 
 import java.util.List;
+import java.util.stream.Collector;
+import java.util.stream.Collectors;
+
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
@@ -12,16 +15,17 @@ import com.aquweak.demo.Product.ProductRepository;
 
 
 @Service
-public class GetAllProductsQueryHandler implements Query<Void, List<ProductDTO>>{
+public class GetAllProductsQueryHandler implements Query<Void, List<Product>>{
 
     @Autowired
     private ProductRepository productRepository;
 
     @Override
-    public ResponseEntity<List<ProductDTO>> execute(Void input) {
-        List<ProductDTO> productDTOs = productRepository.findAll().stream().map(product -> new ProductDTO(product)).toList();
+    public ResponseEntity<List<Product>> execute(Void input) {
+        List<Product> products = productRepository.findAll();
+        // List<ProductDTO> productDTOs = productRepository.findAll().stream().map(product -> new ProductDTO(product)).collect(Collectors.toList());
 
-        return ResponseEntity.ok(productDTOs);
+        return ResponseEntity.ok(products);
     }
     
 }
